# KYD_AI-service-reference-implementation

./: .dockerignore  Dockerfile  README.md  development.env  docker-compose.yaml  pyproject.toml  request-analysis.sample.json  requirements.txt
src/: .dockerignore  analysis.py  custom_log.py  generate_local_mock_request.py  helper.py  service.py
